# docs/swagger.json
@@ -403,6 +403,46 @@
                 }
             }
         },
+        "/api/v1/port/reload/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "重启端口对应的服务",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "端口信息"
+                ],
+                "summary": "重启端口对应的服务",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code: 200 成功",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Base"
+                        }
+                    },
+                    "500": {
+                        "description": "错误返回内容",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Base"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/port/state/{id}": {
             "put": {
                 "security": [
@@ -483,21 +523,21 @@
                 }
             }
         },
-        "/api/v1/route": {
+        "/api/v1/rule": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "查询路由匹配信息",
+                "description": "查询匹配规则信息",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "路由匹配信息"
+                    "匹配规则信息"
                 ],
-                "summary": "查询路由匹配信息",
+                "summary": "查询匹配规则信息",
                 "parameters": [
                     {
                         "type": "string",
@@ -551,22 +591,22 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "修改路由匹配信息",
+                "description": "修改匹配规则信息",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "路由匹配信息"
+                    "匹配规则信息"
                 ],
-                "summary": "修改路由匹配信息",
+                "summary": "修改匹配规则信息",
                 "parameters": [
                     {
-                        "description": "修改路由匹配信息",
+                        "description": "修改匹配规则信息",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.ModifyRoute"
+                            "$ref": "#/definitions/repository.ModifyRule"
                         }
                     }
                 ],
@@ -591,22 +631,22 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "创建路由匹配信息",
+                "description": "创建匹配规则信息",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "路由匹配信息"
+                    "匹配规则信息"
                 ],
-                "summary": "创建路由匹配信息",
+                "summary": "创建匹配规则信息",
                 "parameters": [
                     {
-                        "description": "创建路由匹配信息",
+                        "description": "创建匹配规则信息",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.CreateRoute"
+                            "$ref": "#/definitions/repository.CreateRule"
                         }
                     }
                 ],
@@ -631,14 +671,14 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "删除路由匹配信息",
+                "description": "删除匹配规则信息",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "路由匹配信息"
+                    "匹配规则信息"
                 ],
-                "summary": "删除路由匹配信息",
+                "summary": "删除匹配规则信息",
                 "parameters": [
                     {
                         "type": "string",
@@ -664,25 +704,25 @@
                 }
             }
         },
-        "/api/v1/route/{id}": {
+        "/api/v1/rule/{id}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "通过编码查询路由匹配信息",
+                "description": "通过编码查询匹配规则信息",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "路由匹配信息"
+                    "匹配规则信息"
                 ],
-                "summary": "通过编码查询路由匹配信息",
+                "summary": "通过编码查询匹配规则信息",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "路由匹配信息编码",
+                        "description": "匹配规则信息编码",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1198,8 +1238,8 @@
             "type": "object",
             "required": [
                 "name",
-                "nodeType",
-                "portId"
+                "portId",
+                "target"
             ],
             "properties": {
                 "mark": {
@@ -1221,6 +1261,10 @@
                 "portId": {
                     "description": "端口信息编码",
                     "type": "string"
+                },
+                "target": {
+                    "description": "目标服务地址",
+                    "type": "string"
                 }
             }
         },
@@ -1230,7 +1274,7 @@
                 "port"
             ],
             "properties": {
-                "certCode": {
+                "certId": {
                     "description": "证书编码",
                     "type": "string"
                 },
@@ -1248,7 +1292,7 @@
                 }
             }
         },
-        "repository.CreateRoute": {
+        "repository.CreateRule": {
             "type": "object",
             "required": [
                 "matchType",
@@ -1318,8 +1362,8 @@
             "required": [
                 "id",
                 "name",
-                "nodeType",
-                "portId"
+                "portId",
+                "target"
             ],
             "properties": {
                 "id": {
@@ -1345,6 +1389,10 @@
                 "portId": {
                     "description": "端口信息编码",
                     "type": "string"
+                },
+                "target": {
+                    "description": "目标服务地址",
+                    "type": "string"
                 }
             }
         },
@@ -1355,7 +1403,7 @@
                 "port"
             ],
             "properties": {
-                "certCode": {
+                "certId": {
                     "description": "证书编码",
                     "type": "string"
                 },
@@ -1377,7 +1425,7 @@
                 }
             }
         },
-        "repository.ModifyRoute": {
+        "repository.ModifyRule": {
             "type": "object",
             "required": [
                 "id",
